add client/show/{id} page

--- a/src/main/resources/templates/Client/create.html
+++ b/src/main/resources/templates/Client/create.html
@@ -138,8 +138,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="contactPhone">Телефон за връзка:</label>
-                                <input type="text" id="contactPhone" name="contactPhone" pattern="\\d{6,}"
-                                       title="Моля въведете валиден телефонен номер с поне 6 цифри!"/>
+                                <input type="text" id="contactPhone" name="contactPhone"/>
                             </div>
                             <div class="form-group">
                                 <label for="deliveryAddress">Адрес за доставка:</label>
@@ -148,7 +147,7 @@
 
                             <div class="form-group">
                                 <label for="information">Допълнителна информация:</label>
-                                <textarea id="information" name="information" rows="4" cols="50"></textarea>
+                                <textarea id="information" name="information" rows="4" cols="45"></textarea>
                             </div>
                             <div class="form-check">
                                 <div class="form-group english-field">
