--- a/src/main/resources/templates/Client/edit.html
+++ b/src/main/resources/templates/Client/edit.html
@@ -144,6 +144,19 @@ document.addEventListener("DOMContentLoaded", function() {
                                        title="Номера по ЕИК трябва да бъде последователност от 5 знака!"
                                        th:field="*{idNumEIK}"/>
                                 <div class="error-message"></div>
+                                <div class="form-group">
+                                    <label for="contactPhone">Телефон за връзка:</label>
+                                    <input type="text" id="contactPhone" name="contactPhone"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="deliveryAddress">Адрес за доставка:</label>
+                                    <input type="text" id="deliveryAddress" name="deliveryAddress"/>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="information">Допълнителна информация:</label>
+                                    <textarea id="information" name="information" rows="4" cols="45"></textarea>
+                                </div>
                             </div>
                             <div class="form-check">
                                 <div class="form-group english-field">
