--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -68,9 +68,6 @@
                                         <th>Адрес</th>
                                         <th>Български клиент</th>
                                         <th>МОЛ</th>
-                                        <th>Телефон за контакт</th> <!-- New field -->
-                                        <th>Адрес за доставка</th>  <!-- New field -->
-                                        <th>Допълнителна информация</th>
                                         <th>Управляващ Профил</th>
                                         <th>Действия</th>
                                     </tr>
@@ -84,18 +81,13 @@
                                         <td th:text="${client.isBulgarianClient ? client.address : client.englishAddress}"></td>
                                         <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
                                         <td th:text="${client.isBulgarianClient ? client.mol : client.englishMol}"></td>
-                                      <td th:text="${client.contactPhone}"></td> <!-- Display contactPhone -->
-                      <td th:text="${client.deliveryAddress}"></td> <!-- Display deliveryAddress -->
-                      <td th:text="${client.information}"></td> <!-- Display information -->
-                                        <td>
                                         <td>
         <span th:if="${client.customer != null}">
     <span th:each="user : ${users}" th:if="${user.id == client.customer}">
-        <a th:href="@{'/client/show/' + ${client.id}}" th:text="${user.firstname} + ' ' + ${user.lastname}+ ' ' +${user.email}"></a>
+        <a th:href="@{'/client/show/' + ${client.id}}" th:text=Информация></a>
     </span>
-</span>
-                                            <span th:if="${client.customer == null}"></span>
-                                        </td>
+</span></td>
+                                        <td>
                                             <form th:action="@{'/client/delete/' + ${client.id}}" method="post"
                                                   th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете клинет с id: ' + ${client.id} + '?\');'">
                                                 <button type="submit" class="btn btn-danger">Изтрий</button>
