add information in Client DTO

--- a/src/main/resources/templates/Client/showById.html
+++ b/src/main/resources/templates/Client/showById.html
@@ -77,7 +77,7 @@
 
                                     <div class="separator"></div> <!-- Разделителна лента -->
 
-                                    <div class="right-column">
+                                    <div class="right-column" th:if="${user != null}">
                                         <div>
                                             <strong class="header-profile">Управляващ профил:</strong>
                                         </div>
