--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                                     <p>Адрес: България, Търговище Промишлена зона</p>
                                     <p>Email: <a href="mailto:office@lukeria.eu">office@lukeria.eu</a>, <a
                                             href="mailto:lukeria@mail.bg">lukeria@mail.bg</a></p>
-                                    <p>Телефон: 060164664 </p>
+                                    <p>Телефон: <a href="tel:+359879379966">+359 879 379 966</a></p>
                                     <p>
                                         За Покупка: <a href="https://supreva.com/bg/lukeriya-ood/?category_id=265"
                                                        target="_blank">Натиснете тук</a>
