--- a/src/main/resources/templates/Product/edit.html
+++ b/src/main/resources/templates/Product/edit.html
@@ -69,6 +69,17 @@ document.addEventListener("DOMContentLoaded", function() {
                                                    name="availableQuantity" th:field="*{availableQuantity}" required min="1" th:value="${product.availableQuantity}">
                                         </div>
                                         <div class="form-group">
+                                            <label>Продуктът е наличен за продажба</label>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="forSaleYes" name="forSale" value="true" th:checked="${product.forSale}">
+                                                <label class="form-check-label" for="forSaleYes">Да</label>
+                                            </div>
+                                            <div class="form-check">
+                                                <input type="radio" class="form-check-input" id="forSaleNo" name="forSale" value="false" th:checked="${!product.forSale}">
+                                                <label class="form-check-label" for="forSaleNo">Не</label>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <label for="searchInputBarcode">Баркод на продукта</label>
                                             <div class="input-container">
                                                 <input type="text" class="form-control" id="searchInputBarcode" name="barcode" th:field="*{barcode}"
