--- a/src/main/resources/templates/Product/available-products.html
+++ b/src/main/resources/templates/Product/available-products.html
@@ -7,18 +7,11 @@
     <title>Продукти Лукерия</title>
     <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/show.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+    <link rel="stylesheet" href="/css/modalStyles.css">
+    <link rel="stylesheet" href="/css/videoStyles.css">
 </head>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-    const navbar = document.getElementById("sidebar");
-    console.log(navbar);
-    const toggler = document.querySelector("a.sidebar-toggle");
-    toggler.addEventListener("click", () => {
-    navbar.classList.toggle("collapsed");
-    });
-});
-
-</script>
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
@@ -79,37 +72,30 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <th>Код на продукта</th>
                                         <th>Име на Продукт</th>
                                         <th>Наличност</th>
-                                        <th:block
-                                                th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
-                                            <th>Цена за брой</th>
-                                        </th:block>
+                                        <th>Цена за брой</th>
+
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="product, iter : ${products}" data-id="${product.id}" class="plate-row">
+                                    <tr th:each="productPrice, iter : ${products}"
+                                        data-id="${productPrice.product.id}" class="plate-row">
                                         <td>
-                                            <img th:if="${productPackageMapImages.containsKey(product.packageId)}"
-                                                 th:src="@{${backendBaseUrl} + '/' + ${productPackageMapImages.get(product.packageId)}}"
-                                                 height="100"
-                                                 width="100">
-                                            <img th:unless="${productPackageMapImages.containsKey(product.packageId)}"
+                                            <img th:if="${productPackageMapImages.containsKey(productPrice.product.packageId)}"
+                                                 th:src="@{${backendBaseUrl} + '/' + ${productPackageMapImages.get(productPrice.product.packageId)}}"
+                                                 style="height: 100px; width: 150px;">
+                                            <img th:unless="${productPackageMapImages.containsKey(productPrice.product.packageId)}"
                                                  class="card-img-top"
                                                  src="/img/photos/noImage.png"
-                                                 height="100"
-                                                 width="100">
+                                                 style="height: 100px; width: 150px;" >
                                         </td>
 
-                                        <td th:text="${product.productCode}"></td>
-                                        <td th:text="${productPackageMap.get(product.packageId)}"></td>
+                                        <td th:text="${productPrice.product.productCode}"></td>
+                                        <td th:text="${productPackageMap.get(productPrice.product.packageId)}"></td>
                                         <td>
-                                            <span th:text="${product.availableQuantity + ' Броя'}"
-                                                  th:class="${product.availableQuantity <= 20 ? 'red-cell' : (product.availableQuantity <= 100 ? 'yellow-cell' : '')}"></span>
+                                            <span th:text="${productPrice.product.availableQuantity + ' Броя'}"
+                                                  th:class="${productPrice.product.availableQuantity <= 20 ? 'red-cell' : (productPrice.product.availableQuantity <= 100 ? 'yellow-cell' : '')}"></span>
                                         </td>
-                                        <th:block
-                                                th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
-                                            <td th:text="${product.price + ' Лв'}"></td>
-                                            </td>
-                                        </th:block>
+                                        <td th:text="${productPrice.price + ' Лв'}"></td>
                                     </tr>
                                     </tbody>
                                 </table>
