add function for navbar

--- a/src/main/resources/templates/Product/available-products.html
+++ b/src/main/resources/templates/Product/available-products.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="/css/modalStyles.css">
     <link rel="stylesheet" href="/css/videoStyles.css">
 </head>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const navbar = document.getElementById("sidebar");
+        console.log(navbar);
+        const toggler = document.querySelector("a.sidebar-toggle");
+        toggler.addEventListener("click", () => {
+        navbar.classList.toggle("collapsed");
+        });
+    });
+</script>
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
